--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <h2>Entrevista Complexo XP</h2>
       <input type="text" id="nome" placeholder="Nome Completo (IRL)">
       <input type="text" id="data" placeholder="Data de Nascimento (Ex: dd mm aaaa)">
-      <input type="text" id="idade" placeholder="Idade" disabled>
+      <input type="text" id="idade" placeholder="Formatode data inválido!" disabled>
       <input type="text" id="discord" placeholder="ID Discord">
       <input type="text" id="entrevista" placeholder="Número da Entrevista">
       <select id="rumo">
