--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
       <div class="descricao-geral">
         <span style="color: #ffe082; font-size: 0.97em;">
           <b>Aqui ficam salvos todos os aprovados por rumo até que você clique em "Nova Entrevista (Limpar dados salvos)".</b><br>
-          Limpar apenas os campos visuais de aprovados/reprovados não zera estes dados.(Na teoria)
+          Limpar apenas os campos visuais de aprovados/reprovados não zera estes dados. (Na teoria)<br>
+		  Clicar em salvar entrevista completa vai salvar tudo que etá aqui e não o que esta no campo aprovados e reprovados.
         </span>
       </div>
       <div class="botoes-rumo">
