--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           <span style="color:#4caf50;font-weight:bold;">✅</span> Todos os dados de aprovados e reprovados de todas as entrevistas ficam salvos, mesmo que você limpe os campos visuais. Esses dados só serão apagados ao clicar em <b>"Nova Entrevista"</b>.<br><br>
           <span style="color:#ffb300;font-weight:bold;">⚠️</span> Limpar os campos visuais não apaga os dados salvos das entrevistas.<br><br>
           <span style="color:#4f8cff;font-weight:bold;">💾</span> <b>Salvar entrevista completa</b> salva todas as entrevistas acumuladas no painel geral, não apenas as informações visuais atuais.<br><br>
-          <span style="color:#ffe082;font-weight:bold;">ℹ️</span> Na teoria, todo esse processo funciona como esperado, mas podem ocorrer falhas.
+          <span style="color:#ffe082;font-weight:bold;">ℹ️</span> Aqui está o documento que deve ser repasasdo para o entrevistado: <a href="https://docs.google.com/document/d/1FRO7mZaNyVMSYKPTDAvXHE1kXz14GlOz5VGh7FhR-Kg/edit?pli=1&tab=t.0" style="color: red;">Regras básicas.</a>
         </p>
       </div>
       <div class="botoes-rumo">
